# iona

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/src/: FileWatcher.h  WindowsFileWatcher.cpp  WindowsFileWatcher.h  main.cpp
interpreter/: CMakeLists.txt
interpreter/include/: Core.h  FunctionRegistry.h  Interpreter.h  InterpreterScope.h  Lexer.h  Parser.h  Standard.h  Token.h  TokenType.h  Visitor.h
interpreter/include/Ast/: BinaryNode.h  BlockNode.h  BooleanNode.h  DoWhileNode.h  ForEachNode.h  ForINode.h  FunctionCallNode.h  FunctionNode.h  IfNode.h  MainNode.h  Node.h  ReturnNode.h  VariableArrayAssignNode.h  VariableArrayDeclarationAssignNode.h  VariableArrayUsageNode.h  VariableAssignNode.h  VariableCompoundAssignNode.h  VariableDeclarationAssignNode.h  VariableIncrementDecrementNode.h  VariableUsageNode.h  WhileNode.h
interpreter/include/Ast/Literal/: BoolNode.h  FloatNode.h  IntNode.h  StringNode.h
interpreter/include/Semantic/: FunctionSymbol.h  ScopedSymbolTable.h  SemanticAnalyzer.h  Symbol.h  VariableSymbol.h
interpreter/src/: FunctionRegistry.cpp  Interpreter.cpp  InterpreterScope.cpp  Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
interpreter/src/Ast/: BinaryNode.cpp  BlockNode.cpp  BooleanNode.cpp  DoWhileNode.cpp  ForEachNode.cpp  ForINode.cpp  FunctionCallNode.cpp  FunctionNode.cpp  IfNode.cpp  MainNode.cpp  ReturnNode.cpp  VariableArrayAssignNode.cpp  VariableArrayDeclarationAssignNode.cpp  VariableArrayUsageNode.cpp  VariableAssignNode.cpp  VariableCompoundAssignNode.cpp  VariableDeclarationAssignNode.cpp  VariableIncrementDecrementNode.cpp  VariableUsageNode.cpp  WhileNode.cpp
interpreter/src/Semantic/: FunctionSymbol.cpp  ScopedSymbolTable.cpp  SemanticAnalyzer.cpp  Symbol.cpp  VariableSymbol.cpp
(+6 files in other folders)
